# aidea-cli

./: CHANGELOG.md  README.md  setup.cfg
aidea/: main.py  tools.py
