[metadata]
name = aidea
version = 1.1.0
author = AIdea
author_email = admin.AIdea@itri.org.tw
description = AIdea API
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
	Programming Language :: Python :: 3
	License :: OSI Approved :: Apache Software License

[options]
packages = find:
python_requires = >=3.6
install_requires =
	requests
	texttable
	tqdm
	icecream
	requests_toolbelt

[options.entry_points]
console_scripts =
	aidea = aidea.main:main

[egg_info]
tag_build =
tag_date = 0
